--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -18,6 +18,11 @@
 
 @import "components/alignment";
 
+// Visibility
+//##########################
+
+@import "visibility";
+
 // Background
 //##########################
 
