Added fade toggle (visibility setting)

--- a/src/components/buttons/index.scss
+++ b/src/components/buttons/index.scss
@@ -13,6 +13,11 @@
     // Border
     @include round_border;
 
+    // Cursor
+    &:hover {
+        cursor: pointer;
+    }
+
     // Disabled properties
     &[disabled] {
         cursor: not-allowed;
