Added sized buttons

--- a/src/components/buttons/index.scss
+++ b/src/components/buttons/index.scss
@@ -25,17 +25,10 @@
     }
 }
 
-// Coloring
+// Imports
 @import "colors";
-
-// Grouping
 @import "grouping";
-
-// Circle
 @import "icon";
-
-// Image
 @import "image";
-
-// Line art button
 @import "line";
+@import "sized";
