Added popup and alert notifications

--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -35,7 +35,5 @@
     }
 
     // Border
-    @if ($__use_rounded) {
-        border-radius: get_var("__border_size");
-    }
+    @include round_border;
 }
