--- a/src/custom/naming.scss
+++ b/src/custom/naming.scss
@@ -69,6 +69,7 @@ $_interactive_name:         "interactive"   !default;
 $_context_name:             "context"       !default;
 $_body_name:                "body"          !default;
 $_target_name:              "target"        !default;
+$_options_name:             "options"       !default;
 
 // Stars
 $_star_name:                "star"          !default;
