--- a/src/components/backgrounds/index.scss
+++ b/src/components/backgrounds/index.scss
@@ -9,8 +9,12 @@
 }
 
 .#{$_fullscreen_name} {
-    position: relative;
+    left: 0;
+    top: 0;
+    z-index: 10000;
+    position: fixed;
     min-height: 100vh;
+    min-width: 100vw;
     background-attachment: inherit !important;
 }
 
