--- a/src/custom/naming.scss
+++ b/src/custom/naming.scss
@@ -1,7 +1,7 @@
 // Grid
 $_column_name:              "block"     !default;
 $_column_offset_name:       "push"      !default;
-$_container_name:           "container" !default;
+$_container_name:           "stand"     !default;
 $_row_name:                 "shelf"     !default;
 
 // Text
