--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -3,6 +3,11 @@
 
 @import "components/grid";
 
+// Positioning
+//##########################
+
+@import "positioning";
+
 // Spacement
 //##########################
 
