Fixed wrong references

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,7 +1,7 @@
 // Grid
 //##########################
 
-@import "components/grid";
+@import "grid";
 
 // Positioning
 //##########################
@@ -11,17 +11,17 @@
 // Spacement
 //##########################
 
-@import "components/spacement";
+@import "spacement";
 
 // Animations
 //##########################
 
-@import "components/animations";
+@import "animations";
 
 // Alignment
 //##########################
 
-@import "components/alignment";
+@import "alignment";
 
 // Visibility
 //##########################
@@ -31,7 +31,7 @@
 // Background
 //##########################
 
-@import "components/backgrounds";
+@import "backgrounds";
 
 // Sampling
 //##########################
