--- a/src/components/form/checkbox.scss
+++ b/src/components/form/checkbox.scss
@@ -10,7 +10,9 @@
     label {
         padding: get_var("__padding_size");
         margin-left: calc(#{get_var("__margin_size")} * 2);
-        margin-bottom: calc(#{get_var("__margin_size")} * 2);
+		margin-bottom: calc(#{get_var("__margin_size")} * 2);
+		display: flex;
+		align-items: center;
     }
 
     // Input
@@ -25,32 +27,16 @@
             height: calc(#{get_var("__font_normal_size")} / 2);
             padding: calc(#{get_var("__padding_size")});
             border: 2px solid get_var("primary_color");
-            float: right;
-            margin-left: get_var("__font_normal_size");
+            background: transparent;
+			margin-right: get_var("__font_normal_size");
+			transition: background .1s ease;
             
             @include round_border(.75);
         }
-        
-        //Check (not selected)
-        & + label:after {
-            content:"";
-            position: absolute;
-            display: inline-block;
-            background: get_var("primary_color");
-            width: calc(#{get_var("__font_normal_size")} / 2 - 4px);
-            height: calc(#{get_var("__font_normal_size")} / 2 - 4px);
-            padding: calc((#{get_var("__padding_size")}));
-            margin: 4px;
-            opacity: 0;
-            transition: all .2s;
-            margin-left: calc(#{get_var("__font_normal_size")} + 4px);
-            
-            @include round_border(.6);
-        }
 
         //Check (selected)
-        &:checked + label:after {
-            opacity: 1;
+        &:checked + label:before {
+            background: get_var("primary_color");
         }
 
         //Disabled input
