--- a/src/components/notification/popup.scss
+++ b/src/components/notification/popup.scss
@@ -14,7 +14,8 @@
     .#{$_options_name} {
         position: absolute;
         right: 0;
-        top: 0;
+		top: 0;
+		font-size: 12px;
     }
 
     // Fix content color
